# weather-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: prod.yaml
core/: config.py  params.py
docker/: Dockerfile
handlers/: __init__.py  broadcast.py  location_broadcast.py  name_broadcast.py  start.py
keyboards/: main_keyboard.py
services/: __init__.py  cache.py  get_weather.py  response_template.py
src/: main.py
src/core/: __init__.py  config.py
src/dependencies/: __init__.py  cache.py  config.py  http.py  redis.py  services.py
src/handlers/: __init__.py  broadcast.py  notifications.py  start.py
src/keyboards/: inline_keyboard.py  main_keyboard.py
src/models/: __init__.py  params.py
src/services/: __init__.py  cache.py  get_weather.py  weather.py
src/tasks/: celery.py  tasks.py
