[project]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = [{ name = "MarkCesium", email = "cesiummark01@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "aiogram>=3.2.0,<4",
    "pydantic-settings>=2.3.4,<3",
    "redis>=5.0.7,<6",
    "dishka>=1.7.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
